# quickjs-cmake

./: .gitignore  README.md
cmds/: README.md  cmake-mingw32-var.bat  cmake-mingw64-var.bat  cmakepath.bat
libqjs/: CMakeLists.txt  _ver.rc.in  build-all.bat  build-last-64.bat  build-last.bat  build-mingw.bat  build-one.bat  libqjs-config-version.cmake  libqjs-config.cmake  libqjs.cmake  usage.txt
libqjs/examples/: .clang-format  CMakeLists.txt  build-c.bat  hello.cpp  hello.js  hello_mod.js
quickjs-2020-11-08/: quickjs.h
quickjs-2021-03-27/: quickjs.h
quickjs-2023-12-09/: quickjs.h
quickjs-2024-01-13/: quickjs.h
quickjs-2025-04-26/: quickjs.h
quickjs-2025-09-13/: quickjs.h
